# system-labs

lab1/: Hotel.cpp  Hotel.h  Lab1.cpp  Makefile
lab2/: Hotel.cpp  Hotel.h  HotelStubDatabase.cpp  HotelStubDatabase.h  Makefile  Writer.cpp  Writer.h  main.cpp
lab3,4,5/Client/: CMakeLists.txt
lab3,4,5/Client/App/: main.cpp  memento.cpp  memento.h
lab3,4,5/Client/DAL/: Note.cpp  Note.h  NotesRepository.cpp  NotesRepository.h  ObjectHelper.cpp  ObjectHelper.h  QueryFactory.cpp  User.cpp  User.h  UserRepository.cpp  UserRepository.h  clientsocket.cpp  clientsocket.h
lab3,4,5/Client/Presenter/: main_presenter.cpp  main_presenter.h
lab3,4,5/Client/Utils/: filemanager.cpp  filemanager.h
lab3,4,5/Client/View/: editorview.cpp  editorview.h  editorview.ui  loginview.cpp  loginview.h  loginview.ui  mainview.cpp  mainview.h  mainview.ui
lab3,4,5/Server/: AppTcpServer.cpp  AppTcpServer.h  CMakeLists.txt  Note.cpp  Note.h  NotesRepository.cpp  NotesRepository.h  ObjectHelper.cpp  ObjectHelper.h  QueryFactory.cpp  QueryFactory.h  User.cpp  User.h  Util.h  main.cpp
